#25 - alignment issue fixed

--- a/themes/indigo-wine/less/_cart.less
+++ b/themes/indigo-wine/less/_cart.less
@@ -46,6 +46,9 @@
 		.checkout-button{
 			font-family: 'gotham_mediumregular' !important;
 		}
+		.product-name{
+			width: 200px;
+		}
 	}
 	.calculated_shipping,.hb-woo-cart_totals{
 		.hb-cart-totals-wrap{
